# Enterprise-Lakehouse-Architecture-on-Databricks

./: README.md  main.py  pipeline_config.json  pyproject.toml
Data/data/: customer_reviews.csv  customers.csv  menu_items.csv
Data/sql/: utility_script.sql
Databrick Dashboard/: dashboard queries.sql
Databrick Pipelines/Pipeline_ingestion_for_event_hub (bronze)/explorations/: eventhub.py
Databrick Pipelines/Pipeline_ingestion_for_event_hub (bronze)/transformations/: Historical_backfill.sql  event_hub.py
Databrick Pipelines/Pipeline_silver_transformation (silver)/explorations/: fact_order.py  fact_order_item.py
Databrick Pipelines/Pipeline_silver_transformation (silver)/transformations/: fact_order_items.py  fact_orders.py  fact_reviews.sql
Databrick Pipelines/pipeline_gold_transform (gold)/explorations/: d_customer360.py  d_restaurant_reviews.py  d_sales_summary.py
Databrick Pipelines/pipeline_gold_transform (gold)/transformations/: d_customer360.py  d_restaurant_reviews.py  daily_sales_summary.py
