[project]
name = "databrick-end-to-end-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.38.2",
    "numpy>=2.4.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz>=2025.2",
    "typing-extensions>=4.15.0",
]
